--- a/src/main/resources/com/example/demo/friendRequest.fxml
+++ b/src/main/resources/com/example/demo/friendRequest.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
@@ -147,14 +146,14 @@
                   </Text>
                   <VBox maxWidth="-Infinity" prefHeight="115.0" prefWidth="775.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <children>
-                        <Label fx:id="friend1" text="Label">
+                        <Text fx:id="friend1" strokeType="OUTSIDE" strokeWidth="0.0" text="friend1">
                            <VBox.margin>
                               <Insets left="40.0" top="20.0" />
                            </VBox.margin>
                            <font>
-                              <Font name="Arial Rounded MT Bold" size="18.0" />
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
                            </font>
-                        </Label>
+                        </Text>
                         <Button mnemonicParsing="false" text="Reject">
                            <VBox.margin>
                               <Insets left="600.0" top="25.0" />
@@ -173,7 +172,7 @@
                         </Button>
                         <Button mnemonicParsing="false" onAction="#viewProfile" text="View Profile">
                            <VBox.margin>
-                              <Insets left="40.0" top="-20.0" />
+                              <Insets left="40.0" top="-22.0" />
                            </VBox.margin>
                            <font>
                               <Font name="Arial Rounded MT Bold" size="13.0" />
@@ -186,14 +185,14 @@
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="115.0" prefWidth="775.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <children>
-                        <Label fx:id="friend2" text="Label">
+                        <Text fx:id="friend2" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
                            <VBox.margin>
                               <Insets left="40.0" top="20.0" />
                            </VBox.margin>
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="18.0" />
-                           </font>
-                        </Label>
+                        </Text>
                         <Button mnemonicParsing="false" text="Reject">
                            <VBox.margin>
                               <Insets left="600.0" top="25.0" />
@@ -212,7 +211,7 @@
                         </Button>
                         <Button mnemonicParsing="false" onAction="#viewProfile" text="View Profile">
                            <VBox.margin>
-                              <Insets left="40.0" top="-20.0" />
+                              <Insets left="40.0" top="-22.0" />
                            </VBox.margin>
                            <font>
                               <Font name="Arial Rounded MT Bold" size="13.0" />
@@ -225,14 +224,14 @@
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="115.0" prefWidth="775.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <children>
-                        <Label fx:id="friend3" text="Label">
+                        <Text fx:id="friend3" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
                            <VBox.margin>
                               <Insets left="40.0" top="20.0" />
                            </VBox.margin>
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="18.0" />
-                           </font>
-                        </Label>
+                        </Text>
                         <Button mnemonicParsing="false" text="Reject">
                            <VBox.margin>
                               <Insets left="600.0" top="25.0" />
@@ -251,7 +250,7 @@
                         </Button>
                         <Button mnemonicParsing="false" onAction="#viewProfile" text="View Profile">
                            <VBox.margin>
-                              <Insets left="40.0" top="-20.0" />
+                              <Insets left="40.0" top="-22.0" />
                            </VBox.margin>
                            <font>
                               <Font name="Arial Rounded MT Bold" size="13.0" />
@@ -264,14 +263,14 @@
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="115.0" prefWidth="775.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <children>
-                        <Label fx:id="friend4" text="Label">
+                        <Text fx:id="friend4" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
                            <VBox.margin>
                               <Insets left="40.0" top="20.0" />
                            </VBox.margin>
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="18.0" />
-                           </font>
-                        </Label>
+                        </Text>
                         <Button mnemonicParsing="false" text="Reject">
                            <VBox.margin>
                               <Insets left="600.0" top="25.0" />
@@ -290,7 +289,7 @@
                         </Button>
                         <Button mnemonicParsing="false" onAction="#viewProfile" text="View Profile">
                            <VBox.margin>
-                              <Insets left="40.0" top="-20.0" />
+                              <Insets left="40.0" top="-22.0" />
                            </VBox.margin>
                            <font>
                               <Font name="Arial Rounded MT Bold" size="13.0" />
@@ -303,14 +302,14 @@
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="115.0" prefWidth="775.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <children>
-                        <Label fx:id="friend5" text="Label">
+                        <Text fx:id="friend5" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
                            <VBox.margin>
                               <Insets left="40.0" top="20.0" />
                            </VBox.margin>
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="18.0" />
-                           </font>
-                        </Label>
+                        </Text>
                         <Button mnemonicParsing="false" text="Reject">
                            <VBox.margin>
                               <Insets left="600.0" top="25.0" />
@@ -329,7 +328,7 @@
                         </Button>
                         <Button mnemonicParsing="false" onAction="#viewProfile" text="View Profile">
                            <VBox.margin>
-                              <Insets left="40.0" top="-20.0" />
+                              <Insets left="40.0" top="-22.0" />
                            </VBox.margin>
                            <font>
                               <Font name="Arial Rounded MT Bold" size="13.0" />
@@ -342,14 +341,14 @@
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="115.0" prefWidth="775.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <children>
-                        <Label fx:id="friend6" text="Label">
+                        <Text fx:id="friend6" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
                            <VBox.margin>
                               <Insets left="40.0" top="20.0" />
                            </VBox.margin>
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="18.0" />
-                           </font>
-                        </Label>
+                        </Text>
                         <Button mnemonicParsing="false" text="Reject">
                            <VBox.margin>
                               <Insets left="600.0" top="25.0" />
@@ -368,7 +367,7 @@
                         </Button>
                         <Button mnemonicParsing="false" onAction="#viewProfile" text="View Profile">
                            <VBox.margin>
-                              <Insets left="40.0" top="-20.0" />
+                              <Insets left="40.0" top="-22.0" />
                            </VBox.margin>
                            <font>
                               <Font name="Arial Rounded MT Bold" size="13.0" />
@@ -381,14 +380,14 @@
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="115.0" prefWidth="775.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <children>
-                        <Label fx:id="friend7" text="Label">
+                        <Text fx:id="friend7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
                            <VBox.margin>
                               <Insets left="40.0" top="20.0" />
                            </VBox.margin>
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="18.0" />
-                           </font>
-                        </Label>
+                        </Text>
                         <Button mnemonicParsing="false" text="Reject">
                            <VBox.margin>
                               <Insets left="600.0" top="25.0" />
@@ -407,7 +406,7 @@
                         </Button>
                         <Button mnemonicParsing="false" onAction="#viewProfile" text="View Profile">
                            <VBox.margin>
-                              <Insets left="40.0" top="-20.0" />
+                              <Insets left="40.0" top="-22.0" />
                            </VBox.margin>
                            <font>
                               <Font name="Arial Rounded MT Bold" size="13.0" />
@@ -420,14 +419,14 @@
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="115.0" prefWidth="775.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <children>
-                        <Label fx:id="friend8" text="Label">
+                        <Text fx:id="friend8" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
                            <VBox.margin>
                               <Insets left="40.0" top="20.0" />
                            </VBox.margin>
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="18.0" />
-                           </font>
-                        </Label>
+                        </Text>
                         <Button mnemonicParsing="false" text="Reject">
                            <VBox.margin>
                               <Insets left="600.0" top="25.0" />
@@ -446,7 +445,7 @@
                         </Button>
                         <Button mnemonicParsing="false" onAction="#viewProfile" text="View Profile">
                            <VBox.margin>
-                              <Insets left="40.0" top="-20.0" />
+                              <Insets left="40.0" top="-22.0" />
                            </VBox.margin>
                            <font>
                               <Font name="Arial Rounded MT Bold" size="13.0" />
@@ -459,14 +458,14 @@
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="115.0" prefWidth="775.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <children>
-                        <Label fx:id="friend9" text="Label">
+                        <Text fx:id="friend9" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
                            <VBox.margin>
                               <Insets left="40.0" top="20.0" />
                            </VBox.margin>
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="18.0" />
-                           </font>
-                        </Label>
+                        </Text>
                         <Button mnemonicParsing="false" text="Reject">
                            <VBox.margin>
                               <Insets left="600.0" top="25.0" />
@@ -485,7 +484,7 @@
                         </Button>
                         <Button mnemonicParsing="false" onAction="#viewProfile" text="View Profile">
                            <VBox.margin>
-                              <Insets left="40.0" top="-20.0" />
+                              <Insets left="40.0" top="-22.0" />
                            </VBox.margin>
                            <font>
                               <Font name="Arial Rounded MT Bold" size="13.0" />
@@ -498,14 +497,14 @@
                   </VBox>
                   <VBox maxWidth="-Infinity" prefHeight="115.0" prefWidth="775.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                      <children>
-                        <Label fx:id="friend10" text="Label">
+                        <Text fx:id="friend10" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="20.0" />
+                           </font>
                            <VBox.margin>
                               <Insets left="40.0" top="20.0" />
                            </VBox.margin>
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="18.0" />
-                           </font>
-                        </Label>
+                        </Text>
                         <Button mnemonicParsing="false" text="Reject">
                            <VBox.margin>
                               <Insets left="600.0" top="25.0" />
@@ -524,7 +523,7 @@
                         </Button>
                         <Button mnemonicParsing="false" onAction="#viewProfile" text="View Profile">
                            <VBox.margin>
-                              <Insets left="40.0" top="-20.0" />
+                              <Insets left="40.0" top="-22.0" />
                            </VBox.margin>
                            <font>
                               <Font name="Arial Rounded MT Bold" size="13.0" />
